# Recipe-API

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_alter_recipe_user.py  0004_tag.py  0005_recipe_tags.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_recipe_api.py
app/tag/: serializers.py  urls.py  views.py
app/tag/tests/: test_tag_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
