[project]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed Khaled",email = "mohamed.khaled.200540@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "django (==4.2)",
    "djangorestframework (==3.16)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "drf-nested-routers (>=0.95.0,<0.96.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
